--- a/_includes/alternate.html
+++ b/_includes/alternate.html
@@ -6,3 +6,8 @@
     <link rel="alternate" hreflang="pt-br" href="{{ site.url }}{{ page.url_br }}" />
   {% endif %}
 {% endif %}
+
+{% if page.type == 'blog' %}	
+	<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ site.blog.en }}" />
+	<link rel="alternate" hreflang="pt-br" href="{{ site.url }}{{ site.blog.pt-br }}" />
+{% endif %}
