--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 			<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 		{% endif %}
 
-		{% include post.html %}
+		{% include alternate.html %}
 
 		{% if page.layout == 'category' %}
 			<meta name="robots" content="noindex">
