--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -29,3 +29,9 @@ $grid--small: 745px
 
 $grid--break-arrows: 768px
 $grid--break-actions: 600px
+
+$ease1: cubic-bezier(0.72, -0.01, 0.14, 1.03)
+$ease2: cubic-bezier(0.61, 0.44, 0.05, 0.75)
+$ease3: cubic-bezier(0.69, 0.01, 0.25, 1)
+$ease-circle-in: cubic-bezier(0.73, 0.01, 0.99, 0.6)
+$ease-circle-out: cubic-bezier(0.03, 0.63, 0.41, 1.02)
