Changes extensions for files

--- a/_includes/alternate.html
+++ b/_includes/alternate.html
@@ -9,5 +9,6 @@
 
 {% if page.type == 'blog' %}	
 	<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ site.blog.en }}" />
+	<link rel="alternate" hreflang="en" href="{{ site.url }}{{ site.blog.en }}" />
 	<link rel="alternate" hreflang="pt-br" href="{{ site.url }}{{ site.blog.pt-br }}" />
 {% endif %}
