--- a/_includes/alternate.html
+++ b/_includes/alternate.html
@@ -1,14 +1,16 @@
 {% if page.type == 'Post' %}
-  {% if page.lang == "pt-br" %}
-    <link rel="alternate" hreflang="en" href="{{ site.url }}{{ page.url_en }}" />
-  {% endif %}
-  {% if page.lang == "en" %}
-    <link rel="alternate" hreflang="pt-br" href="{{ site.url }}{{ page.url_br }}" />
-  {% endif %}
+	{% assign alternatePosts=site.posts | where:"ref", page.ref | sort: 'lang' | reverse %}
+	{% if alternatePosts.size > 1 %}
+	  {% for post in alternatePosts %}
+	  	<link rel="alternate" hreflang="{{post.lang}}" href="{{ site.url }}{{ post.url }}" />
+	  	{% if post.lang == 'en' %}
+	  		<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ post.url }}" />
+	  	{% endif %}
+	  {% endfor %}
+	{% endif %}
 {% endif %}
-
 {% if page.type == 'blog' %}	
-	<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ site.blog.en }}" />
 	<link rel="alternate" hreflang="en" href="{{ site.url }}{{ site.blog.en }}" />
 	<link rel="alternate" hreflang="pt-br" href="{{ site.url }}{{ site.blog.pt-br }}" />
+	<link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ site.blog.en }}" />
 {% endif %}
