--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 			<meta name="robots" content="noindex">
 		{% endif %}
 
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 
 		<!-- Facebook -->
