--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -62,6 +62,14 @@
 	to
 		transform: rotate(45deg) translateX(0) translateY(0)
 
+/*----------  Post box  ----------*/
+.post-box
+	background-color: #f5f5f5
+	border: solid 1px #eee
+	padding: 15px
+	color: #666
+	font-size: 14px
+	margin-bottom: 25px
 
 /*----------  Post content  ----------*/
 .post-content
