--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -63,7 +63,7 @@
 		transform: rotate(45deg) translateX(0) translateY(0)
 
 /*----------  Post box  ----------*/
-.post-box
+.post-box-info
 	background-color: #f5f5f5
 	border: solid 1px #eee
 	padding: 15px
