remove cache manually

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -81,7 +81,7 @@
 			</script>
 			<noscript><link rel="stylesheet" href="/dist/styles/main.min.css"></noscript>
 		{% else %}
-			<link rel="stylesheet" href="/dist/styles/main.min.css">
+			<link rel="stylesheet" href="/dist/styles/main.min.css?var=1">
 		{% endif %}
 
 		<script type="text/javascript">
