--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 	<div class="header__info">
 		<div>
 			<h1 class="header__title"><a href="/"><span>Raphael</span> Fabeni</a></h1>
-			<h2 class="header__subtitle">Front-end developer</h2>
+			<!-- <h2 class="header__subtitle">Front-end developer</h2> -->
 		</div>
 	</div>
 </header>
