--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -1,10 +1,12 @@
 $color-orange: #f39c12
 $color-blue: #4183d7
 $color-green: #2ecc71
+$color-gray: #444
 
 /*----------  Fonts  ----------*/
 $font-family--default: 'Raleway', Helvetica, Arial, sans-serif
 $font-weight--light: 300
+$font-weight--semibold: 400
 
 /*----------  Theme  ----------*/
 $color-menu: $color-green
