--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,5 +1,6 @@
 ---
 layout: blog
+language: en
 ---
 
 {% assign englishPosts = site.posts | where: 'lang', 'en' | where: 'category', page.category %}
@@ -13,12 +14,10 @@ layout: blog
 {% if englishPosts.size > 0 %}
 	{% for post in englishPosts %}
 		<article class="post" data-post="en">
-			<figure class="post__thumb">
-				<img src="{{ post.image }}" alt="{{ post.alt }}">
-			</figure>
 			<h2 class="post__title">
 				<a class="post__link" href="{{ post.url }}">{{ post.title }}</a>
 			</h2>
+			<span class="post__category">{{ post.category }}</span>
 		</article>
 	{% endfor %}
 {% else %}
@@ -26,16 +25,14 @@ layout: blog
 		<h2><small>Ops... no post found!</small></h2>
 	</div>
 {% endif %}
-<!-- 
-{% if portuguesePosts.size > 0 %}
+
+<!-- {% if portuguesePosts.size > 0 %}
 	{% for post in portuguesePosts %}
-		<article class="post" data-post="pt-br" hidden>
-			<figure class="post__thumb">
-				<img src="{{ post.image }}" alt="{{ post.alt }}">
-			</figure>
+		<article class="post" data-post="en">
 			<h2 class="post__title">
 				<a class="post__link" href="{{ post.url }}">{{ post.title }}</a>
 			</h2>
+			<span class="post__category">{{ post.category }}</span>
 		</article>
 	{% endfor %}
 {% else %}
