--- a/_includes/loop-category.html
+++ b/_includes/loop-category.html
@@ -1,4 +1,5 @@
-<ul class="category-header__list">
+<button type="button" class="category-header__button" data-categories-button>Categorias</button>
+<ul class="category-header__list" data-categories-list>
 	<li>
 		<a class="{% if page.layout == 'blog' %}active-category{% endif %}" href="{{ site.blog[page.lang] }}">
 			{{ site.dictionary[page.lang].all_categories }}
@@ -11,3 +12,4 @@
 	</li>
 	{% endfor %}
 </ul>
+</section>
