--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
 		<meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
 		<link rel="canonical" href="{{ site.url }}{{ page.url }}">
-		<link href='http://raphaelfabeni.com.br/feed.xml' rel='alternate' type='application/atom+xml'>
+		<link href='https://raphaelfabeni.com.br/feed.xml' rel='alternate' type='application/atom+xml'>
 
 		<link rel="apple-touch-icon" sizes="57x57" href="/dist/images/favicon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/dist/images/favicon/apple-icon-60x60.png">
