--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -1,9 +1,12 @@
 /*----------  Header post  ----------*/
 .header-post
-	width: 100%
-	max-width: $grid
 	margin: 0 auto
 	position: relative
+	background-position: center center
+	background-repeat: no-repeat
+	padding-bottom: 52.5%
+	background-size: cover
+	overflow: hidden
 
 	&__image
 		width: 100%
