--- a/src/styles/shared/_grid.sass
+++ b/src/styles/shared/_grid.sass
@@ -8,9 +8,13 @@
 	margin: 0 auto
 
 	@include media($grid)
-		&:not(&--small):not(&--full)
+		&:not(&--small):not(&--full):not(&--full-np)
 			padding-left: 20px
 			padding-right: 20px
+	
+	&--full-np
+		padding-left: 0
+		padding-right: 0
 
 	&--full
 		max-width: 100%
