--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,7 @@
 <script src="/dist/scripts/home.min.js"></script>
 
 {% if page.type == 'Post' %}
-<script src="/dist/scripts/post.min.js"></script>
+<script src="/dist/scripts/arrow.min.js"></script>
 {% endif %}
 
 {% if page.type == 'blog' or page.type == 'category' %}
