Adds a new post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: compress
   </div>
 
 	<div class="full">
-		<div class="container container--small">
+		<div class="container container--small container--spacing">
       <h1 class="post-title" data-post-title>{{ page.title }}</h1>
       {% if page.lang == "en" and alternatePosts.size == 1 %}
       <section class="post-box-info">
