--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -96,7 +96,8 @@
 	p,
 	ul,
 	ol,
-	table
+	table,
+	figure
 		margin-bottom: 25px
 		line-height: 1.6
 		font-size: 18px
@@ -117,29 +118,23 @@
 		list-style-position: inside
 
 	figure
-		margin-bottom: 20px
 		text-align: center
 		display: table
+		width: 100%
 
 		&.text-center
 			margin-left: auto
 			margin-right: auto
 			width: 100%
 
-		&.thumb-left
-			float: left
-			margin-right: 20px
-
-			@include media(550px)
-				float: none
-				margin-right: auto
-				margin-left: auto
-
 		figcaption
 			padding: 10px
 			background-color: #f5f5f5
 			display: table-caption
 			caption-side: bottom 
+			width: 100%
+			font-size: 18px
+			border: solid 1px #ddd
 
 		iframe
 			width: 100%
