--- a/src/styles/shared/_grid.sass
+++ b/src/styles/shared/_grid.sass
@@ -30,6 +30,9 @@
 		max-width: $grid--small + 40px
 		padding-left: 20px
 		padding-right: 20px
+	
+	&--spacing
+		margin-bottom: 25px
 
 /*----------  Flex for center elements  ----------*/
 .is-center
