--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,3 +7,5 @@
 {% if page.type == 'blog' or page.type == 'category' %}
 <script src="/dist/scripts/blog.min.js"></script>
 {% endif %}
+
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5fb7c760aaef1000126fdf46&product=sticky-share-buttons" async="async"></script>
