--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -60,3 +60,8 @@
 	&--linkedin
 		background-color: #006cac
 		box-shadow: 0 5px 0 0 darken(#006cac, 10%)
+	
+	/*----------  Insta  ----------*/
+	&--instagram
+		background-color: #e1306c
+		box-shadow: 0 5px 0 0 darken(#e1306c, 10%)
