Simple adjustments for sub sections

--- a/src/styles/layout/_closet.sass
+++ b/src/styles/layout/_closet.sass
@@ -1,3 +1,5 @@
+// sass-lint:disable-all 
+
 /*----------  Group  ----------*/
 .closet
 
@@ -41,6 +43,9 @@
 
 
 /*----------  Books  ----------*/
+#gr_grid_widget_1545776489 h2
+	display: none
+
 .gr_grid_container
 	display: flex
 	align-items: center
