--- a/src/styles/layout/_thoughts.sass
+++ b/src/styles/layout/_thoughts.sass
@@ -1,3 +1,9 @@
+@keyframes rotation
+	from
+		transform: rotate(0)
+	to
+		transform: rotate(359deg)
+	
 .hold-tweets
 	display: flex
 	flex-wrap: wrap
@@ -9,6 +15,22 @@
 
 	.tweet
 		margin: 10px
+		width: calc(25% - 20px)
+		position: relative
+		min-height: 100px
+		&::before
+			position: absolute
+			left: 50%
+			width: 20px
+			height: 20px
+			border: solid 5px $color-blue
+			border-radius: 50%
+			top: 10px
+			margin-left: -10px
+			border-left-color: #fff
+			content: ''
+			z-index: -1
+			animation: rotation 2s linear infinite
 
 		@include media(600px)
 			max-width: 100%
