--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
 		<meta property="og:site_name" content="Raphael Fabeni" />
 		<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 		<meta property="og:type" content="{% if page.path contains '_posts' %}article{% else %}website{% endif %}" />
-		{% if page.type == 'Post' %}
+		{% if page.type == 'Post' or page.imageExternal == true %}
 		<meta property="og:image" content="{{ page.image }}" />
 		{% else %}
 		<meta property="og:image" content="{{ site.url }}/build/img/{% if page.image %}posts/{{ page.image }}{% else %}raphael-fabeni.jpg{% endif %}" />
