--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,8 +25,10 @@
 		<meta property="og:type" content="{% if page.path contains '_posts' %}article{% else %}website{% endif %}" />
 		{% if page.type == 'Post' or page.imageExternal == true %}
 		<meta property="og:image" content="{{ page.image }}" />
+		<meta property="twittter:image" content="{{ page.image }}" />
 		{% else %}
 		<meta property="og:image" content="{{ site.url }}/build/img/{% if page.image %}posts/{{ page.image }}{% else %}raphael-fabeni.jpg{% endif %}" />
+		<meta property="twitter:image" content="{{ site.url }}/build/img/{% if page.image %}posts/{{ page.image }}{% else %}raphael-fabeni.jpg{% endif %}" />
 		{% endif %}
 		{% if page.path contains '_posts' %}
 		<meta property="article:author" content="https://www.facebook.com/raphaelfabeni" />
