General change for categories

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
 <header class="header container container--full" role="banner">
 	<button class="navigation-button" role="button" data-nav-button>Menu</button>
 		<nav class="navigation" role="menu" data-navigation>
-			<a class="navigation__link" href="/">Home</a>
-			<a class="navigation__link" href="/blog">Blog</a>
-			<a class="navigation__link" href="/my-closet">Closet</a>
-			<a class="navigation__link" href="/thoughts">Thoughts</a>
+			<a class="navigation__link" href="/">✨ Home</a>
+			<a class="navigation__link" href="/blog">🇺🇸 Blog</a>
+			<a class="navigation__link" href="/pt-br/blog">🇧🇷 Blog</a>
+			<a class="navigation__link" href="/my-closet">🗃Closet</a>
+			<a class="navigation__link" href="/thoughts">💭 Thoughts</a>
+			<a class="navigation__link" href="/gear">⚙️ Gear</a>
 			<button class="navigation__close" role="button" data-nav-close>x</button>
 		</nav>
 	<div class="header__info">
