--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,5 +91,15 @@
 
 		gtag('config', 'UA-16831060-1');
 	</script>
-
+	<script>
+		if (window.netlifyIdentity) {
+			window.netlifyIdentity.on("init", user => {
+				if (!user) {
+					window.netlifyIdentity.on("login", () => {
+						document.location.href = "/admin/";
+					});
+				}
+			});
+		}
+	</script>
 </head>
