--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,6 +91,7 @@
 
 		gtag('config', 'UA-16831060-1');
 	</script>
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	<script>
 		if (window.netlifyIdentity) {
 			window.netlifyIdentity.on("init", user => {
