--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -139,6 +139,9 @@
 		iframe
 			width: 100%
 
+			&.strava
+				min-height: 350px
+
 	/*----------  code  ----------*/
 	// pre
 	// 	font-size: 18px
