A lot of changes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
 
 		{% include alternate.html %}
 
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 
