--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -4,7 +4,8 @@ $color-green: #2ecc71
 $color-gray: #444
 
 /*----------  Fonts  ----------*/
-$font-family--default: 'Raleway', Helvetica, Arial, sans-serif
+$font-family--default: Helvetica, Arial, sans-serif
+$font-family--loaded: 'Raleway', Helvetica, Arial, sans-serif
 $font-weight--light: 300
 $font-weight--semibold: 400
 
