--- a/src/styles/components/_category-header.sass
+++ b/src/styles/components/_category-header.sass
@@ -16,6 +16,7 @@
 			background-color: transparent
 			padding: 15px
 			font-family: $font-family--default
+			@include fonts-loaded($font-family--loaded)
 			cursor: pointer
 
 			&:hover,
