--- a/src/styles/components/_typography.sass
+++ b/src/styles/components/_typography.sass
@@ -3,6 +3,7 @@ body
 	font-family: $font-family--default
 	font-weight: $font-weight--light
 	font-size: 20px
+	@include fonts-loaded($font-family--loaded)
 
 	@include media(768px)
 		font-size: 16px
