--- a/src/styles/config/_mixins.sass
+++ b/src/styles/config/_mixins.sass
@@ -1,3 +1,7 @@
 @mixin media($media)
 	@media only screen and (max-width: $media)
 		@content
+
+@mixin fonts-loaded($font)
+	.font-loaded &
+		font-family: $font
