--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -87,6 +87,11 @@
 		font-weight: 600
 		display: inline-block
 		vertical-align: baseline
+	
+	i
+		font-style: italic
+		display: inline-block
+		vertical-align: baseline
 
 	blockquote
 		border-left: solid 10px lighten($color-gray, 68)
