--- a/src/styles/config/_mixins.sass
+++ b/src/styles/config/_mixins.sass
@@ -2,6 +2,10 @@
 	@media only screen and (max-width: $media)
 		@content
 
+@mixin media-min($media)
+	@media only screen and (min-width: $media)
+		@content
+
 @mixin fonts-loaded($font)
 	.font-loaded &
 		font-family: $font
