--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -130,6 +130,10 @@
 			max-width: none
 			width: 100vw
 
+			img
+				max-width: none
+				width: 100vw
+
 	h2,
 	h3,
 	h4
@@ -165,6 +169,7 @@
 			width: 100%
 			font-size: 18px
 			border: solid 1px #ddd
+			border-top: none
 
 		iframe
 			width: 100%
