--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -50,6 +50,7 @@
 	padding-bottom: 25px
 	border-bottom: solid 1px #eee
 	font-size: 40px
+	text-align: center
 
 	&.no-top-spacing
 		padding-top: 0
