Adds video widget

--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -82,6 +82,13 @@
 	.post-detail
 		background-color: lighten($color-gray, 68)
 		padding: 20px
+
+	.post-video
+		position: relative
+		text-align: center
+
+		video
+			max-width: 100%
 	
 	b,
 	strong
