--- a/_includes/video.html
+++ b/_includes/video.html
@@ -3,6 +3,7 @@
     preload="auto"
     poster="{{ include.poster }}"
     controls="controls"
+    controlslist="nofullscreen"
     src="{{ include.src }}"
     {% if include.width != "" %}width="{{ include.width }}"{% endif %}
     {% if include.height != "" %}height="{{ include.height }}"{% endif %}
