Update box include

--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -83,6 +83,12 @@
 		background-color: lighten($color-gray, 68)
 		padding: 20px
 
+		> *
+			margin-bottom: 0
+		
+		> * + *
+			margin-top: 20px
+
 	.post-video
 		position: relative
 		text-align: center
