--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -65,3 +65,9 @@
 	&--instagram
 		background-color: #e1306c
 		box-shadow: 0 5px 0 0 darken(#e1306c, 10%)
+
+	/*----------  Youtube  ----------*/
+	&--youtube
+		background-color: #ff0000
+		box-shadow: 0 5px 0 0 darken(#ff0000, 10%)
+
