--- a/src/styles/layout/_gear.sass
+++ b/src/styles/layout/_gear.sass
@@ -14,6 +14,9 @@
 		&-item
 			margin: 20px
 
+			&.is-retired
+				opacity: .5
+
 			@include media(960px)
 				width: 100%
 				text-align: center
