--- a/_includes/head.html
+++ b/_includes/head.html
@@ -85,14 +85,15 @@
 		{% endif %}
 
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-16831060-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CXEJZPSZ45"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-		gtag('config', 'UA-16831060-1');
-	</script>
+  gtag('config', 'G-CXEJZPSZ45');
+</script>
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	<script>
 		if (window.netlifyIdentity) {
