--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
 
   {% include header.html %}
 
-  <main role="main" id="content" class="container container--full container--flex">
+  <main role="main" id="content" class="container container--full">
     {{ content }}
   </main>
 
