--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@ layout: compress
 
   {% include head.html %}
 
-	<style>
+	<!-- <style>
 		{% include css/critical.css %}
-	</style>
+	</style> -->
 
 <body class="has-cover is-center home" data-hold>
 
