--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,13 +86,22 @@
 
 
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0GYX8BYY0"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0GYX8BYY0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-Z0GYX8BYY0');
+</script> -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2XN4N5BCDB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2XN4N5BCDB');
 </script>
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	<script>
