--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header container container--full" role="banner">
+<!-- <header class="header container container--full" role="banner">
 	<button class="navigation-button" role="button" data-nav-button>Menu</button>
 		<nav class="navigation" role="menu" data-navigation>
 			<a class="navigation__link" href="/">✨ Home</a>
@@ -9,10 +9,4 @@
 			<a class="navigation__link" href="/gear">⚙️ Gear</a>
 			<button class="navigation__close" role="button" data-nav-close>x</button>
 		</nav>
-	<div class="header__info">
-		<div>
-			<h1 class="header__title"><a href="/">Raphael Fabeni</a></h1>
-			<!-- <h2 class="header__subtitle">Front-end developer</h2> -->
-		</div>
-	</div>
-</header>
+</header> -->
