--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -19,7 +19,7 @@
 
     p {
       background: url("../images/raphael-fabeni-tt-large.jpg");
-      background-size: cover;
+      // background-size: cover;
       background-position: center;
       text-fill-color: transparent;
       -webkit-text-fill-color: transparent;
@@ -84,31 +84,58 @@
   background-color: #fff;
 
   &__section {
-    position: sticky;
-    height: 100vh;
-    margin: 0 auto 10vh 0;
-    top: 0;
-    overflow: hidden;
-    background-color: #fff;
-    width: calc( 50% + 1px);
+    width: 100%;
     padding: 40px;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: center;
 
-    &:nth-child(1),
-    &:nth-child(2) {
-      width: 50%;
-      margin: 0 0 10vh 0;
-    }
-
-    &:nth-of-type(odd):not(:nth-child(1)) {
-      margin: 0 0 10vh auto;
-    }
-
-    &:nth-of-type(even):not(:nth-child(2)) {
+    @media (min-width: 950px) {
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+      justify-content: center;
+      position: sticky;
+      height: 100vh;
       margin: 0 auto 10vh 0;
+      top: 0;
+      overflow: hidden;
+      background-color: #fff;
+      width: calc( 50% + 1px);
+
+      &:nth-child(1),
+      &:nth-child(2) {
+        width: 50%;
+        margin: 0 0 10vh 0;
+      }
+
+      &:nth-of-type(odd):not(:nth-child(1)) {
+        margin: 0 0 10vh auto;
+      }
+
+      &:nth-of-type(even):not(:nth-child(2)) {
+        margin: 0 auto 10vh 0;
+      }
+    }
+
+    &--blue {
+      background: linear-gradient(45deg, $color-blue 0%,darken($color-blue, 15%) 100%);
+
+      .info__text {
+        color: #fff;
+      }
+    }
+
+    &--profile {
+      @media (max-width: 950px) {
+        padding-top: 0;
+      }
+    }
+  }
+
+  &__section--running {
+    background: url("../images/raphael-fabeni-running.jpg") no-repeat;
+    background-size: cover;
+    background-position: 40% 0;
+    @media (max-width: 950px) {
+      display: none;
     }
   }
 
@@ -117,4 +144,70 @@
     line-height: 36px;
   }
   
+}
+
+.contact {
+  padding: 40px;
+  text-align: center;
+
+  @media (max-width: 840px) {
+    padding: 20px;
+  }
+
+  &__title {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  &__list {
+    display: inline-table;
+    margin-top: 20px;
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+
+    @media (max-width: 840px) {
+      padding: 0
+    }
+
+    li {
+      display: inline-block;
+      width: 16.6%;
+      max-width: 140px;
+
+      @media (max-width: 550px) {
+        width: 33.3%;
+      }
+    }
+
+    a {
+      padding: 20px;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      transition: background-color 0.3s ease;
+
+      &:hover,
+      &:focus {
+        background-color: #f5f5f5
+      }
+    }
+
+    span {
+      font-weight: 600;
+    }
+
+    img {
+      width: 60px;
+      height: auto;
+      margin-bottom: 20px;
+
+      @media (max-width: 840px) {
+        width: 40px;
+      }
+    }
+  }
 }
