--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header class="header" role="banner">
 	<a href="/" class="header__title">RF</a>
 	<nav class="navigation" role="menu" data-navigation>
-		<a class="navigation__link" href="/blog">🇺🇸 Blog</a>
-		<a class="navigation__link" href="/pt-br/blog">🇧🇷 Blog</a>
+		<a class="navigation__link" href="https://www.youtube.com/raphaelfabeni">YouTube</a>
+		<a class="navigation__link" href="/blog"><span>🇺🇸</span> Blog</a>
+		<a class="navigation__link" href="/pt-br/blog"><span>🇧🇷</span> Blog</a>
 		<a class="navigation__link" href="/my-closet">Closet</a>
 		<a class="navigation__link" href="/gear">Gear</a>
 		<a class="navigation__link" href="/links/">Links</a>
