--- a/_includes/block-post.html
+++ b/_includes/block-post.html
@@ -1,6 +1,9 @@
-<article class="post" data-post="en">
-  <a class="post__link" href="{{ post.url }}">
-    <h2 class="post__title">{{ post.title }}</h2>
-    <span class="post__category">{{ post.category }}</span>
+<article class="blog-post" data-post="en">
+  <a class="blog-post__image" href="{{ post.url }}">
+    <img src="{{ post.image }}" alt="{{ post.alt }}">
+    <span class="blog-post__category">{{ post.category }}</span>
   </a>
+  <h2 class="blog-post__title">
+    <a class="blog-post__link" href="{{ post.url }}">{{ post.title }}</a>
+  </h2>
 </article>
