--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,12 +1,14 @@
 .header {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100vw;
   z-index: 10;
   padding: 10px 20px;
   display: flex;
   align-items: center;
   background-color: #fff;
+  box-shadow: 0px 1px 10px 0px rgba(0,0,0,.15);
 
   &__title {
     color: $color-blue;
@@ -23,15 +25,22 @@
 
   .navigation {
     margin: 0 auto;
+    display: flex;
+    overflow: scroll;
 
     a {
       text-decoration: none;
       text-transform: uppercase;
       color: #999;
-      display: inline-block;
+      display: inline-flex;
       padding: 12px;
       transition: color .3s ease;
       font-size: 14px;
+      align-items: center;
+
+      > span {
+        margin-right: 8px;
+      }
 
       &:hover,
       &:focus {
