--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,8 +12,11 @@
 		<link rel="stylesheet" href="/assets/css/styles.css">
 		{% elsif page.type == 'blog' %}
 		<link rel="stylesheet" href="/assets/css/blog-styles.css">
-		{% else %}
+		{% elsif page.type == 'post' %}
 		<link rel="stylesheet" href="/assets/css/post-styles.css">
+		{% elsif page.type == 'links' %}
+		<link rel="stylesheet" href="/assets/css/links-styles.css">
+		{% else %}
 		{% endif %}
 
 		{% include alternate.html %}
